<resources>
    <string name="app_name">CovidMonitor</string>
    <string name="covid_monitor">Covid monitor</string>
    <string name="desc_logo">Logo de la app</string>
    <string name="chile">Chile</string>
    <string name="infectados">Infectados:</string>
    <string name="nuevos_casos">Nuevos 000</string>
    <string name="muertes">Muertes:</string>
    <string name="recuperados">Recuperados:</string>
    <string name="fecha">Fecha de actualización</string>
    <string name="notificar">Notificar actualización de datos</string>


    <string name="region">Región</string>
    <string name="pais">País</string>
    <string name="revisar_datos_historicos">Revisar datos históricos</string>
    <string name="cargando_datos">Cargando datos</string>
    <string name="cifras">Cifras consultadas</string>
    <string name="fecha_consultada">Fecha</string>
    <string name="casos">Casos a la fecha</string>
    <string name="fallecidos">Fallecidos</string>
    <string name="cargando_regiones">Cargando regiones</string>
    <string name="footer_text">Los datos de contagios de coronavirus (COVID-19)
        en Chile mostrados en esta aplicación, son fuente oficial del gobierno y el
        ministerio de salud.</string>
</resources>
